--- a/calculator/calculator/pom.xml
+++ b/calculator/calculator/pom.xml
@@ -6,7 +6,7 @@
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
 		<version>3.0.6</version>
-		<relativePath/> <!-- lookup parent from repository -->
+		<relativePath/> 
 	</parent>
 	<groupId>com.micro</groupId>
 	<artifactId>calculator</artifactId>
@@ -32,6 +32,13 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		
+		<!-- Dependencia maven-install para tracer-->
+		<dependency>
+		    <groupId>com.iteriam</groupId>
+		    <artifactId>tracer</artifactId>
+		    <version>1.0.0</version>
+		</dependency>
 	</dependencies>
 
 	<build>
@@ -48,6 +55,28 @@
 					</excludes>
 				</configuration>
 			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-install-plugin</artifactId>
+				<version>2.5.1</version>
+				<configuration>
+				    <groupId>com.iteriam</groupId>
+				    <artifactId>tracer</artifactId>
+				    <version>1.0.0</version>
+				    <packaging>jar</packaging>
+				    <file>${basedir}/lib/tracer-1.0.0.jar</file>
+				    <generatePom>true</generatePom>
+				</configuration>
+				<executions>
+				    <execution>
+					<id>install-jar-lib</id>
+					<goals>
+					    <goal>install-file</goal>
+					</goals>
+					<phase>validate</phase>
+				    </execution>
+				</executions>
+		    </plugin>
 		</plugins>
 	</build>
 
