--- a/calculator/calculator/pom.xml
+++ b/calculator/calculator/pom.xml
@@ -15,6 +15,10 @@
 	<description>Calculator micro</description>
 	<properties>
 		<java.version>17</java.version>
+		<maven.compiler.source>1.8</maven.compiler.source>
+        	<maven.compiler.target>1.8</maven.compiler.target>
+        	<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        	<project.build.targetEncoding>UTF-8</project.build.targetEncoding>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -53,6 +57,15 @@
 							<artifactId>lombok</artifactId>
 						</exclude>
 					</excludes>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>cobertura-maven-plugin</artifactId>
+				<version>2.7</version>
+				<configuration>
+				    <format>xml</format>
+				    <maxmem>512m</maxmem>
 				</configuration>
 			</plugin>
 			<plugin>
